--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,5 +22,5 @@ jobs:
 
       - name: Publish Worker with Wrangler
         env:
-          CF_API_TOKEN: ${{ secrets.CF_API_TOKEN }}
-        run: npx wrangler deploy --token $CF_API_TOKEN
+          CF_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+        run: npx wrangler deploy --token $CLOUDFLARE_API_TOKEN
